crates/tiler-ir/tests/shape-evidence/fail/shape_array_rank_limit.rs
use tiler_ir::shape::Shape;

fn main() {
    let _ = Shape::from_dims([1; 4_097]);
}
